<resources>
    <string name="app_name">Acceso Base Datos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvUser">Usuario</string>
    <string name="tvPsswd">Contraseña</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvMail">Correo</string>
    <string name="btnAcceder">Acceder</string>
    <string name="registro">Registrar</string>

    <string name="error">Nombre Usuario/Contraseña Incorrectos</string>
    <string name="correct">Acceso concedido</string>
    <string name="title_activity_main_activity2">Información</string>
    <string name="msgProcesando">Procesando</string>
    <string name="msgEspere">Por favor, espere</string>
    <string name="title_activity_main_activity3">Registro</string>
    <string name="URLLogin">http://padron.16mb.com/login.php</string>
    <string name="URLRegister">http://padron.16mb.com/insert.php</string>
    <string name="postUsername">login_name</string>
    <string name="postPassword">login_pass</string>
    <string name="ok">Aceptar</string>
    <string name="SP_NAME">userDetails</string>

    <string name="name">nombre</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="username">usuario</string>
    <string name="loggedin">loggedIn</string>
</resources>
