<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="padron.myapplication.MainActivity3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textSize="@dimen/titulo"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvTituloRegistro"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:text="@string/tvNombre"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvTituloRegistro"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_below="@id/tvName"
        android:inputType="textCapSentences"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCorreo"
        android:text="@string/tvMail"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMail"
        android:layout_below="@id/tvCorreo"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUser"
        android:text="@string/tvUser"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etMail"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsuario"
        android:layout_below="@id/tvUser"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPasswd"
        android:text="@string/tvPsswd"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etUsuario"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:layout_below="@id/tvPasswd"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegistrar"
        android:text="@string/registro"
        android:layout_below="@id/etPassword"
        android:onClick="registrar"
        />
</RelativeLayout>
